--- a/FCSwift/2.SimpleWeather/SimpleWeather/Base.lproj/Main.storyboard
+++ b/FCSwift/2.SimpleWeather/SimpleWeather/Base.lproj/Main.storyboard
@@ -1,8 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="20037" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="21507" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
     <device id="retina6_0" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="20020"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="21505"/>
         <capability name="Image references" minToolsVersion="12.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="System colors in document resources" minToolsVersion="11.0"/>
@@ -18,7 +19,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="20" translatesAutoresizingMaskIntoConstraints="NO" id="Z2Q-29-u3d">
-                                <rect key="frame" x="0.0" y="74" width="390" height="736"/>
+                                <rect key="frame" x="0.0" y="77" width="390" height="733"/>
                                 <subviews>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Seoul" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Vwf-dV-wyi">
                                         <rect key="frame" x="0.0" y="0.0" width="390" height="40.666666666666664"/>
@@ -40,12 +41,12 @@
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="LUi-oY-mgG">
-                                        <rect key="frame" x="0.0" y="364.33333333333331" width="390" height="171.66666666666669"/>
+                                        <rect key="frame" x="0.0" y="364.33333333333331" width="390" height="168.66666666666669"/>
                                         <subviews>
                                             <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" translatesAutoresizingMaskIntoConstraints="NO" id="YNM-z1-Uog">
-                                                <rect key="frame" x="30" y="38.333333333333371" width="330" height="95"/>
+                                                <rect key="frame" x="30" y="37" width="330" height="95"/>
                                                 <subviews>
-                                                    <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillEqually" spacing="5" translatesAutoresizingMaskIntoConstraints="NO" id="y1e-DR-SeW">
+                                                    <stackView opaque="NO" contentMode="scaleAspectFill" axis="vertical" distribution="fillEqually" spacing="5" translatesAutoresizingMaskIntoConstraints="NO" id="y1e-DR-SeW">
                                                         <rect key="frame" x="0.0" y="0.0" width="66" height="95"/>
                                                         <subviews>
                                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="MON" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="j4f-tI-C99">
@@ -55,7 +56,7 @@
                                                                 <nil key="highlightedColor"/>
                                                             </label>
                                                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="Eax-fu-r8Z">
-                                                                <rect key="frame" x="0.0" y="35.666666666666643" width="66" height="23.333333333333329"/>
+                                                                <rect key="frame" x="0.0" y="36.000000000000028" width="66" height="23.333333333333336"/>
                                                                 <imageReference key="image" image="cloud.fill" catalog="system" renderingMode="original"/>
                                                             </imageView>
                                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="18°" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Ccm-vA-6jB">
@@ -76,7 +77,7 @@
                                                                 <nil key="highlightedColor"/>
                                                             </label>
                                                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="m12-tt-Tau">
-                                                                <rect key="frame" x="0.0" y="35.666666666666643" width="66" height="25"/>
+                                                                <rect key="frame" x="0.0" y="35.000000000000036" width="66" height="25"/>
                                                                 <imageReference key="image" image="wind" catalog="system" renderingMode="original"/>
                                                             </imageView>
                                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="10°" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Y9n-Rp-Q5K">
@@ -97,7 +98,7 @@
                                                                 <nil key="highlightedColor"/>
                                                             </label>
                                                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="4Y2-O6-O1P">
-                                                                <rect key="frame" x="0.0" y="33.333333333333314" width="66" height="28.333333333333329"/>
+                                                                <rect key="frame" x="0.0" y="33.333333333333371" width="66" height="28.333333333333329"/>
                                                                 <imageReference key="image" image="sun.max.fill" catalog="system" renderingMode="original"/>
                                                             </imageView>
                                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="12°" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="jUP-xC-hnj">
@@ -118,7 +119,7 @@
                                                                 <nil key="highlightedColor"/>
                                                             </label>
                                                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="C6Y-DX-S4O">
-                                                                <rect key="frame" x="0.0" y="33.999999999999986" width="66" height="29.333333333333329"/>
+                                                                <rect key="frame" x="0.0" y="33.000000000000043" width="66" height="29.333333333333329"/>
                                                                 <imageReference key="image" image="cloud.rain.fill" catalog="system" renderingMode="original"/>
                                                             </imageView>
                                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="18°" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Oeh-Za-TBR">
@@ -139,7 +140,7 @@
                                                                 <nil key="highlightedColor"/>
                                                             </label>
                                                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="m4x-kn-5Ak">
-                                                                <rect key="frame" x="0.0" y="33.999999999999979" width="66" height="30"/>
+                                                                <rect key="frame" x="0.0" y="33.000000000000036" width="66" height="30"/>
                                                                 <imageReference key="image" image="cloud.bolt.fill" catalog="system" renderingMode="original"/>
                                                             </imageView>
                                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="18°" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="321-xO-Vck">
@@ -163,7 +164,7 @@
                                         </constraints>
                                     </view>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="WxC-mG-OTC">
-                                        <rect key="frame" x="0.0" y="556" width="390" height="180"/>
+                                        <rect key="frame" x="0.0" y="553" width="390" height="180"/>
                                         <subviews>
                                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="vnp-wc-h4X">
                                                 <rect key="frame" x="20" y="50" width="350" height="80"/>
@@ -189,19 +190,22 @@
                                         </constraints>
                                     </view>
                                 </subviews>
+                                <constraints>
+                                    <constraint firstItem="2Yu-16-79p" firstAttribute="top" secondItem="Vwf-dV-wyi" secondAttribute="bottom" constant="20" id="OXR-Bu-dnF"/>
+                                </constraints>
                             </stackView>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                         <color key="backgroundColor" systemColor="systemTealColor"/>
                         <constraints>
-                            <constraint firstItem="Z2Q-29-u3d" firstAttribute="trailing" secondItem="6Tk-OE-BBY" secondAttribute="trailing" id="2K7-yk-nNk"/>
-                            <constraint firstItem="Z2Q-29-u3d" firstAttribute="bottom" secondItem="6Tk-OE-BBY" secondAttribute="bottom" id="EGF-e7-cWD"/>
-                            <constraint firstItem="Z2Q-29-u3d" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="30" id="cUI-vq-BdE"/>
+                            <constraint firstItem="Z2Q-29-u3d" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="30" id="Fzj-SA-JKJ"/>
+                            <constraint firstItem="Z2Q-29-u3d" firstAttribute="bottom" secondItem="6Tk-OE-BBY" secondAttribute="bottom" id="gCF-xz-rTm"/>
                             <constraint firstItem="Z2Q-29-u3d" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="gry-1U-ZUQ"/>
+                            <constraint firstItem="Z2Q-29-u3d" firstAttribute="trailing" secondItem="6Tk-OE-BBY" secondAttribute="trailing" id="kaJ-Ah-yhu"/>
                         </constraints>
                     </view>
                     <connections>
-                        <outlet property="CityLable" destination="Vwf-dV-wyi" id="rEz-Ae-utg"/>
+                        <outlet property="cityLable" destination="Vwf-dV-wyi" id="lju-GS-jAj"/>
                         <outlet property="temperatureLable" destination="5Lf-Zt-yRG" id="JUW-mo-18f"/>
                         <outlet property="weatherImageView" destination="2Yu-16-79p" id="fik-Lx-f0x"/>
                     </connections>
@@ -213,9 +217,9 @@
     </scenes>
     <resources>
         <image name="cloud.bolt.fill" catalog="system" width="122" height="128"/>
-        <image name="cloud.fill" catalog="system" width="128" height="88"/>
-        <image name="cloud.rain.fill" catalog="system" width="125" height="128"/>
-        <image name="sun.max.fill" catalog="system" width="128" height="124"/>
+        <image name="cloud.fill" catalog="system" width="128" height="87"/>
+        <image name="cloud.rain.fill" catalog="system" width="126" height="128"/>
+        <image name="sun.max.fill" catalog="system" width="128" height="125"/>
         <image name="wind" catalog="system" width="128" height="103"/>
         <systemColor name="systemTealColor">
             <color red="0.18823529411764706" green="0.69019607843137254" blue="0.7803921568627451" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
