--- a/Allen UIKit/MusicApp/MusicApp/Views/Base.lproj/Main.storyboard
+++ b/Allen UIKit/MusicApp/MusicApp/Views/Base.lproj/Main.storyboard
@@ -18,7 +18,7 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" misplaced="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="o5I-cG-itZ">
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="o5I-cG-itZ">
                                 <rect key="frame" x="0.0" y="144" width="414" height="752"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                             </tableView>
@@ -26,7 +26,7 @@
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
-                            <constraint firstItem="o5I-cG-itZ" firstAttribute="bottom" secondItem="8bC-Xf-vdC" secondAttribute="bottom" constant="-34" id="6g8-Sn-eYW"/>
+                            <constraint firstItem="o5I-cG-itZ" firstAttribute="bottom" secondItem="8bC-Xf-vdC" secondAttribute="bottom" id="6g8-Sn-eYW"/>
                             <constraint firstItem="o5I-cG-itZ" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="Cnw-Zp-Etw"/>
                             <constraint firstItem="o5I-cG-itZ" firstAttribute="trailing" secondItem="6Tk-OE-BBY" secondAttribute="trailing" id="TQ3-bP-XrD"/>
                             <constraint firstItem="o5I-cG-itZ" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="WN3-7L-Grp"/>
@@ -49,7 +49,7 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" misplaced="YES" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="s2l-Fe-nJQ">
+                            <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="s2l-Fe-nJQ">
                                 <rect key="frame" x="0.0" y="48" width="414" height="848"/>
                                 <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <collectionViewFlowLayout key="collectionViewLayout" automaticEstimatedItemSize="YES" minimumLineSpacing="10" minimumInteritemSpacing="10" id="5Ic-4p-M9S">
@@ -89,7 +89,7 @@
                         <constraints>
                             <constraint firstItem="s2l-Fe-nJQ" firstAttribute="leading" secondItem="mCl-wv-27X" secondAttribute="leading" id="G8I-mY-uIs"/>
                             <constraint firstItem="s2l-Fe-nJQ" firstAttribute="top" secondItem="mCl-wv-27X" secondAttribute="top" id="iO2-B2-ikM"/>
-                            <constraint firstAttribute="bottom" secondItem="s2l-Fe-nJQ" secondAttribute="bottom" constant="34" id="ibJ-wO-hap"/>
+                            <constraint firstAttribute="bottom" secondItem="s2l-Fe-nJQ" secondAttribute="bottom" id="ibJ-wO-hap"/>
                             <constraint firstItem="mCl-wv-27X" firstAttribute="trailing" secondItem="s2l-Fe-nJQ" secondAttribute="trailing" id="zvD-uZ-eeD"/>
                         </constraints>
                     </view>
